# rust-doodle

./: .gitignore  Cargo.toml  README.md  setup.sh
.cargo/: config.toml
src/: main.rs
